--- a/style.css
+++ b/style.css
@@ -7,6 +7,64 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-size: 1.125rem;
 }
 
 /* Add styles here! */
+.max-width-wrapper{
+  max-width: 900px;
+  margin: 0 auto;
+  border: 1px;
+  padding: 0 24px;
+}
+
+
+h1,h2{
+  margin:0;
+}
+
+
+
+.intro-chunk{
+  padding-top:96px;
+  max-width: 400px;
+}
+
+.intro-chunk p{
+  font-size: 1.125rem;
+}
+.intro-chunk .title{
+  font-size:2rem;
+  margin-bottom:32px;
+}
+.intro-chunk strong{
+  color:hsl(160deg, 100%, 30%);
+}
+main{
+  background-color:hsl(0deg 0% 50% / 35%);
+  padding:96px 0;
+}
+
+.card{
+  background-color:hsl(0deg 0% 100%);
+  padding:24px;
+  margin:-24px;
+  border-bottom:8px solid hsl(0deg, 0%, 40%);
+}
+
+.card p{
+  line-height: 1.4;
+}
+
+.indented-heading{
+  background-color:hsl(47deg 100% 50% / 85%);
+  padding: 16px 32px;
+  margin-left:-32px;
+  margin-top:-16px;
+  width:max-content;
+  border-bottom:8px solid hsl(45deg, 100%, 50%);
+}
+
+.card p:last-child{
+  margin-bottom:0;
+}
